# AppTimeTracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  preview.html  vite.config.js  编译安装说明书.md
scripts/: gen-icons.js
src/: app.js  theme.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  tracker.rs
src/views/: home.js  settings.js  welcome.js
