[package]
name = "app-time-tracker"
version = "1.0.0"
description = "应用使用时长追踪器"
authors = ["AppTimeTracker"]
edition = "2021"

[lib]
name = "app_time_tracker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "app-time-tracker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_UI_Shell_Common",
] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
base64 = "0.22"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
open = "5"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
